<resources>
    <string name="app_name">Amucss</string>
    <string name="login">INGRESAR</string>
    <string name="usuario">Usuario</string>
    <string name="user">Usuario</string>
    <string name="clave">Clave</string>
    <string name="clavec">Confirmar Clave</string>
    <string name="registro">Registrate</string>
    <string name="cuenta">No tienes Cuenta? </string>
    <string name="title_activity_registro_">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apat">Apellido Paterno</string>
    <string name="amat">Apellido Materno</string>
    <string name="edad">Edad</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="tel">Telefono</string>
    <string name="ema">Correo Electronico</string>
    <string name="eresocio">¿Eres Socio de SMB?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="guardar">Guardar</string>
    <string name="esp">Español</string>
    <string name="nah">Nahuatl</string>
    <string name="oto">Otomi</string>
    <string name="mix">Mixteco</string>
    <string name="zap">Zapoteco</string>
    <string name="nv">Nuevo</string>
    <string name="cl">Clave de Acceso</string>
    <string name="sal">Salir</string>
    <string name="aviso">Aviso de Privacidad</string>
    <string name="title_activity_clave">Clave</string>
    <string name="title_activity_lobby_">Lobby_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tomin">Escribe el Nombre de la Alcancia</string>
    <string name="tominpuerco">TOMIN</string>
    <string name="siguiente">Siguiente</string>
</resources>
