<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"
        android:layout_height="192dp"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/inicio"
                android:scaleType="centerCrop" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.amucss.mx.amucss.Registro_Activity">

            <Button
                android:id="@+id/bt_aviso"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/aviso" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bt_aviso"
                android:layout_marginTop="15dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/var_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/textInputLayout1"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/var_apat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apat"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/textInputLayout2"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/var_amat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amat"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radios"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout3"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/hombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/hombre" />

                <RadioButton
                    android:id="@+id/mujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mujer" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radios"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/textInputLayout5"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/var_edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edad"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/radios"
                android:layout_marginTop="15dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/var_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout6"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/textInputLayout5"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/var_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ema"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout4"
                android:layout_toEndOf="@+id/bt_aviso"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/eresocio"
                android:textColor="@color/negro" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/socio"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/si"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/si" />

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout7"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/textInputLayout6"
                app:passwordToggleEnabled="true"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/var_clave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clave"
                    android:inputType="textPassword"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout8"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/textInputLayout7"
                app:passwordToggleEnabled="true"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/var_cclave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clavec"
                    android:inputType="textPassword"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_registra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/login"
                android:text="@string/guardar"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginTop="63dp"
                android:layout_below="@+id/textInputLayout8"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/bt_aviso"
                android:layout_marginEnd="10dp"
                android:src="@drawable/icono" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
